# YT_Downloader

./: LICENSE  README.md  pyproject.toml
liquidglass_downloader/: cli.py
liquidglass_downloader/core/: config.py  db.py  downloader.py  logging_util.py  metadata.py  models.py
liquidglass_downloader/ui/: app.py  notifier.py  theme.py  utils.py
liquidglass_downloader/ui/dialogs/: add_urls_dialog.py
liquidglass_downloader/ui/views/: history_view.py  queue_view.py  settings_view.py
scripts/: build_win.ps1  run.ps1
